# orumcek

./: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  main.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/orumcek/: CMakeLists.txt  main.cpp
